# esp-mpu9250

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
.devcontainer/: Dockerfile  devcontainer.json
components/ahrs/: CMakeLists.txt  MadgwickAHRS.c  MadgwickAHRS.h  ahrs.c
components/ahrs/include/: ahrs.h
components/mpu9250/: CMakeLists.txt  Kconfig  ak8963.c  ak8963.h  calibrate.c  calibrate.h  common.c  i2c-easy.c  i2c-easy.h  mpu9250.c  mpu9250.h
components/mpu9250/include/: common.h
main/: CMakeLists.txt  ak8963.c  common.h  i2c-easy.c  main.c
